# iROS_drone

./: README.md
rotors_simulator/: README.md
rotors_simulator/rotors_gazebo/: CMakeLists.txt  package.xml
rotors_simulator/rotors_gazebo/include/: fake_driver.h
rotors_simulator/rotors_gazebo/launch/: drone.launch  mav_velocity_control_with_fake_driver.launch  mav_velocity_control_with_joy.launch
rotors_simulator/rotors_gazebo/models/caixas/caixa_azul/: model.sdf
rotors_simulator/rotors_gazebo/models/caixas/caixa_verde/: model.sdf
rotors_simulator/rotors_gazebo/models/desk_yellow/: model.sdf
rotors_simulator/rotors_gazebo/models/desk_yellow_0_0_clone/: model.config  model.sdf
rotors_simulator/rotors_gazebo/models/desk_yellow_0_0_clone_0/: model.config  model.sdf
rotors_simulator/rotors_gazebo/models/desk_yellow_0_0_clone_0_0/: model.config  model.sdf
rotors_simulator/rotors_gazebo/models/desk_yellow_0_0_clone_0_0_0/: model.config  model.sdf
rotors_simulator/rotors_gazebo/src/: fake_driver.cpp  velocity_control_with_joy.cpp
rotors_simulator/rotors_gazebo/worlds/: caixas.world
